--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,23 +1,23 @@
 {
   "name": "domain-switcher-extension",
   "description": "A Vue.js web extension",
-  "version": null,
+  "version": "0.1.0",
   "manifest_version": 2,
   "icons": {
     "48": "icons/icon_48.png",
     "128": "icons/icon_128.png"
   },
-  "browser_action": {
-    "default_title": "domain-switcher-extension",
+  "page_action": {
+    "default_icon": {
+      "19": "icons/icon-19.png",
+      "38": "icons/icon-38.png"
+    },
+    "default_title": "Domain Switcher",
     "default_popup": "popup/popup.html"
   },
   "background": {
-    "scripts": [
-      "background.js"
-    ]
+    "scripts": ["background.js"]
   },
-  "options_ui": {
-    "page": "options/options.html",
-    "chrome_style": true
-  }
+  "options_page": "options/options.html",
+  "permissions": ["tabs"]
 }
