--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,30 @@
 {
-  "plugins": [
-    "@babel/plugin-proposal-optional-chaining",
-    "@babel/plugin-proposal-class-properties"
-  ],
-  "presets": [
-    ["@babel/preset-env", {
-      "useBuiltIns": "usage",
-      "corejs": 3,
-      "targets": {
-        // https://jamie.build/last-2-versions
-        "browsers": ["> 0.25%", "not ie 11", "not op_mini all"]
-      }
-    }]
-  ]
+    "plugins": [
+        "@babel/plugin-proposal-optional-chaining",
+        "@babel/plugin-proposal-class-properties",
+        [
+            "component",
+            {
+                "libraryName": "element-ui",
+                "styleLibraryName": "theme-chalk"
+            }
+        ]
+    ],
+    "presets": [
+        [
+            "@babel/preset-env",
+            {
+                "useBuiltIns": "usage",
+                "corejs": 3,
+                "targets": {
+                    // https://jamie.build/last-2-versions
+                    "browsers": [
+                        "> 0.25%",
+                        "not ie 11",
+                        "not op_mini all"
+                    ]
+                }
+            }
+        ]
+    ]
 }
