Add Support for regular expressions in projects/environments
- Useful for users who have projects where the domains are structured in the same way across environments

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "scripts": {
         "lint": "eslint --ext .js,.vue src",
         "test": "jest",
+        "test:watch": "jest --watch",
         "prettier": "prettier \"src/**/*.{js,vue}\"",
         "prettier:write": "npm run prettier -- --write",
         "build": "cross-env NODE_ENV=production webpack --hide-modules",
