--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,11 +28,12 @@ jobs:
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
-      uses: Klemensas/chrome-extension-upload-action@$VERSION
+      uses: trmcnvn/chrome-addon@v2
       with:
-        refresh-token: 'xxxxxxxxxxxxxxxxxxxxxx'
-        client-id: 'xxxxxxxxxxxxx'
-        client-secret: 'xxxxxxxxxxxx'
-        file-name: './extension.zip'
-        app-id: 'xzc12xzc21cx23'
-        publish: true
+        # extension is only necessary when updating an existing addon,
+        # omitting it will create a new addon
+        extension: bcgpoogiobjioebmbafkdaekndlknmdf
+        zip: dist-zip/domain-switcher-extension.zip
+        client-id: ${{ secrets.CHROME_CLIENT_ID }}
+        client-secret: ${{ secrets.CHROME_CLIENT_SECRET }}
+        refresh-token: ${{ secrets.CHROME_REFRESH_TOKEN }}
