--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,7 @@ name: Publish Chrome Extension
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
-on: ['deployment']
+on: ['deployment', 'workflow_dispatch']
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
