--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "1.1.2",
     "author": "Alexander Pape",
     "engines": {
-        "node": ">=10"
+        "node": ">=10 <15"
     },
     "scripts": {
         "lint": "eslint --ext .js,.vue src",
